Fix scrollbar issues
Closes #10.

--- a/styles/service-sidebar.less
+++ b/styles/service-sidebar.less
@@ -5,7 +5,7 @@
     font-size: @font-size-base;
 
     .contents {
-      overflow-y: scroll;
+      overflow-y: auto;
       clear: both;
     }
   }
